# fiona-agent

./: LICENSE  README.md  agent-rules.md  contributing.md  heartbeat.md  pyproject.toml  requirements.txt  roadmap.md  security.md
.github/workflows/: python.yml
agent/: fiona_agent.py
datasets/: sample_posts.json
docs/: FAQ.md  architecture.md  checklist.md  experiment_notes.md  persona.md  run.md
scripts/: format.sh  run_local.sh  simulate.py
src/: fiona.py  scoring.py
src/fiona_agent/: __init__.py  agent.py  benchmark.py  cli.py  config.py  environment.py  evaluator.py  feedback.py  memory.py  policy.py  queue.py  runtime.py  scheduler.py  scoring.py  signals.py  simulator.py  types.py
tests/: test_agent.py  test_benchmark.py  test_environment.py  test_evaluator.py  test_feedback.py  test_policy.py  test_runtime.py  test_scoring.py  test_simulator.py  tests_signals.py
