[project]
name = "fiona-agent"
version = "0.1.0"
description = "Experimental AI agent exploring selective social exposure and constrained engagement."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pytest>=7.0"
]

[project.scripts]
fiona-agent = "fiona_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
